--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --watch server.js"
-  },
+    "dev": "nodemon --match server.js"
+  }, 
   "keywords": [],
   "author": "",
   "license": "ISC",
